# smitepaper-flask-server

./: pyproject.toml
tests/: test_smitepaper.py
