[tool.poetry]
name = "smitepaper"
version = "0.1.0"
description = ""
authors = ["Simeon Králik <simeon.kralik@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.10"
Flask = "~1.0.4"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"
black = "^22.6.0"
flake8 = "^5.0.4"
pytest = "^7.1.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
